Fixed home routing & learn about button

--- a/client/pages/index.html
+++ b/client/pages/index.html
@@ -93,7 +93,8 @@
             <h2 class="titleTxt">About Us</h2>
             <h4 class="subtitleTxt">Cheap Prices for Quality Cars</h4>
             <p class="mainAbout__contentTxt contentTxt">We have the lowest prices for the cars you love.</p>
-            <button class="mainBtn">LEARN MORE</button>
+            <a class="mainBtn mainAbout__btn"
+            href="about.html">LEARN MORE</a>
         </div>
     </section>
 </main>
